--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0",
     "zustand": "^5.0.3"
   },
